# workflow-manager

./: .gitignore  GitHub start.txt  chatClaude.md  hibak.json  hibakV2.json  inditas.txt  package-lock.json  package.json  playwright.config.js  workflow-manager-ralph-fixed-ai.json
.ralph-tui/: progress.md  session-meta.json  session.json
backend/: alembic.ini  pyproject.toml  requirements.txt  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 16e7379fb456_add_systemsettings_model_for_embedding_.py  8be7b635839c_initial_schema.py  a1b2c3d4e5f6_add_ai_importance_reason_to_emails.py  b2c3d4e5f6a7_add_ai_confidence_to_email_task_links.py  c3d4e5f6a7b8_add_personality_change_log.py  d4e5f6a7b8c9_add_summary_to_documents.py  e8566a20f821_add_document_chunks_email_attachments_.py  f5a2e8c19d43_add_quick_guide_to_process_instance.py  g6b3f9d20e54_add_subtasks.py
backend/app/: config.py  database.py  main.py
backend/app/core/: audit_middleware.py  config.py  database.py
backend/app/models/: models.py
backend/app/routers/: ai_settings.py  audit.py  chat.py  dashboard.py  documents.py  emails.py  health.py  ideas.py  monthly_tasks.py  processes.py  rag_debug.py  scripts.py  settings.py  statistics.py  statuses.py  subtasks.py  tokens.py  websocket_router.py
backend/app/schemas/: schemas.py
backend/app/services/: ai_service.py  embedding_config.py  embedding_service.py  rag_service.py  scheduler.py
backend/tests/: conftest.py  test_documents.py  test_health.py  test_settings.py  test_statuses.py
frontend/: index.html  package-lock.json  (+3 more)
(+38 files in other folders)
