[project]
name = "workflow-manager-backend"
version = "0.1.0"
description = "Workflow Manager Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "langchain",
    "faiss-cpu",
    "pypdf2",
    "python-docx",
    "openpyxl",
    "httpx",
    "apscheduler",
    "websockets",
    "pypff",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
